Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8
-
Can result in hang or crash
-
Q1/2026 Server Development
Description
Assertion found on debug build
|
origin/10.11 2f5bad2f2bbe1c43bf796edb67b93fc64d3c3157 |
# 2025-10-14T21:27:20 [1774221] | mariadbd: /data/Server/10.11E/storage/innobase/handler/handler0alter.cc:10986: bool commit_cache_norebuild(Alter_inplace_info*, ha_innobase_inplace_ctx*, const TABLE*, const TABLE*, trx_t*): Assertion `ctx->new_table->space != fil_system.sys_space' failed.
|
|
Stacktrace |
# 2025-10-14T21:28:13 [1774221] #0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
|
# 2025-10-14T21:28:13 [1774221] #1 __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
|
# 2025-10-14T21:28:13 [1774221] #2 __GI___pthread_kill (threadid=<optimized out>, signo=6) at ./nptl/pthread_kill.c:89
|
# 2025-10-14T21:28:13 [1774221] #3 0x000058744b104b01 in my_write_core (sig=6) at /data/Server/10.11E/mysys/stacktrace.c:424
|
# 2025-10-14T21:28:13 [1774221] #4 0x000058744ab9b190 in handle_fatal_signal (sig=6) at /data/Server/10.11E/sql/signal_handler.cc:298
|
# 2025-10-14T21:28:13 [1774221] #5 <signal handler called>
|
# 2025-10-14T21:28:13 [1774221] #6 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
|
# 2025-10-14T21:28:13 [1774221] #7 __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
|
# 2025-10-14T21:28:13 [1774221] #8 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
|
# 2025-10-14T21:28:13 [1774221] #9 0x0000733dd9e4526e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
|
# 2025-10-14T21:28:13 [1774221] #10 0x0000733dd9e288ff in __GI_abort () at ./stdlib/abort.c:79
|
# 2025-10-14T21:28:13 [1774221] #11 0x0000733dd9e2881b in __assert_fail_base (fmt=0x733dd9fd01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x58744b299138 "ctx->new_table->space != fil_system.sys_space", file=file@entry=0x58744b28e488 "/data/Server/10.11E/storage/innobase/handler/handler0alter.cc", line=line@entry=10986, function=function@entry=0x58744b299078 "bool commit_cache_norebuild(Alter_inplace_info*, ha_innobase_inplace_ctx*, const TABLE*, const TABLE*, trx_t*)") at ./assert/assert.c:94
|
# 2025-10-14T21:28:13 [1774221] #12 0x0000733dd9e3b507 in __assert_fail (assertion=0x58744b299138 "ctx->new_table->space != fil_system.sys_space", file=0x58744b28e488 "/data/Server/10.11E/storage/innobase/handler/handler0alter.cc", line=10986, function=0x58744b299078 "bool commit_cache_norebuild(Alter_inplace_info*, ha_innobase_inplace_ctx*, const TABLE*, const TABLE*, trx_t*)") at ./assert/assert.c:103
|
# 2025-10-14T21:28:13 [1774221] #13 0x000058744ae1afa1 in commit_cache_norebuild (ha_alter_info=ha_alter_info@entry=0x733dd8358160, ctx=ctx@entry=0x733cf8015678, altered_table=altered_table@entry=0x733dd8358220, table=0x733cf80b9118, trx=trx@entry=0x733dcd002300) at /data/Server/10.11E/storage/innobase/handler/handler0alter.cc:10986
|
# 2025-10-14T21:28:13 [1774221] #14 0x000058744ae041ee in ha_innobase::commit_inplace_alter_table (this=<optimized out>, altered_table=0x733dd8358220, ha_alter_info=0x733dd8358160, commit=<optimized out>) at /data/Server/10.11E/storage/innobase/handler/handler0alter.cc:11764
|
# 2025-10-14T21:28:13 [1774221] #15 0x000058744aba56a7 in handler::ha_commit_inplace_alter_table (this=0x733cf80b9538, altered_table=altered_table@entry=0x733dd8358220, ha_alter_info=ha_alter_info@entry=0x733dd8358160, commit=commit@entry=true) at /data/Server/10.11E/sql/handler.cc:5431
|
# 2025-10-14T21:28:13 [1774221] #16 0x000058744a9e4159 in mysql_inplace_alter_table (thd=thd@entry=0x733cf8000d58, table_list=0x733cf8013690, table=table@entry=0x733cf80b9118, altered_table=altered_table@entry=0x733dd8358220, ha_alter_info=ha_alter_info@entry=0x733dd8358160, target_mdl_request=target_mdl_request@entry=0x733dd8358a40, ddl_log_state=0x733dd8358120, trigger_param=0x733dd8358600, alter_ctx=0x733dd8359610, partial_alter=@0x733dd83580bf: false, start_alter_id=@0x733dd83580c8: 0, if_exists=false) at /data/Server/10.11E/sql/sql_table.cc:8190
|
# 2025-10-14T21:28:13 [1774221] #17 0x000058744a9f53de in mysql_alter_table (thd=thd@entry=0x733cf8000d58, new_db=new_db@entry=0x733cf80058f0, new_name=<optimized out>, create_info=create_info@entry=0x733dd835a4b0, table_list=<optimized out>, table_list@entry=0x733cf8013690, recreate_info=recreate_info@entry=0x733dd835a300, alter_info=<optimized out>, order_num=<optimized out>, order=<optimized out>, ignore=<optimized out>, if_exists=<optimized out>) at /data/Server/10.11E/sql/sql_table.cc:11404
|
# 2025-10-14T21:28:13 [1774221] #18 0x000058744aa643b1 in Sql_cmd_alter_table::execute (this=<optimized out>, thd=0x733cf8000d58) at /data/Server/10.11E/sql/sql_alter.cc:688
|
# 2025-10-14T21:28:13 [1774221] #19 0x000058744a936963 in mysql_execute_command (thd=thd@entry=0x733cf8000d58, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /data/Server/10.11E/sql/sql_parse.cc:6169
|
# 2025-10-14T21:28:13 [1774221] #20 0x000058744a937506 in mysql_parse (thd=thd@entry=0x733cf8000d58, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x733dd835b400) at /data/Server/10.11E/sql/sql_parse.cc:8184
|
# 2025-10-14T21:28:13 [1774221] #21 0x000058744a938b72 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x733cf8000d58, packet=packet@entry=0x733cf800afa9 "ALTER TABLE `t1` PAGE_COMPRESSED=1 /* E_R Thread7 QNO 20 CON_ID 21 */ ", packet_length=packet_length@entry=70, blocking=blocking@entry=true) at /data/Server/10.11E/sql/sql_parse.cc:1906
|
# 2025-10-14T21:28:13 [1774221] #22 0x000058744a93a010 in do_command (thd=thd@entry=0x733cf8000d58, blocking=blocking@entry=true) at /data/Server/10.11E/sql/sql_parse.cc:1419
|
# 2025-10-14T21:28:13 [1774221] #23 0x000058744aa5d0e3 in do_handle_one_connection (connect=<optimized out>, connect@entry=0x58744da66be8, put_in_cache=put_in_cache@entry=true) at /data/Server/10.11E/sql/sql_connect.cc:1475
|
# 2025-10-14T21:28:13 [1774221] #24 0x000058744aa5d2f4 in handle_one_connection (arg=0x58744da66be8) at /data/Server/10.11E/sql/sql_connect.cc:1387
|
# 2025-10-14T21:28:13 [1774221] #25 0x0000733dd9e9ca94 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
|
# 2025-10-14T21:28:13 [1774221] #26 0x0000733dd9f29c3c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
Core dump is present on SDp:-
/data/results/1760480250/TBR-2339